--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<a href="https://thisisnotaniceplace.blogspot.com/p/creepy-links.html">this is not a nice place..</a>
+<a href="https://thisisnotaniceplace.blogspot.com/p/creepy-links.html" hidden>this is not a nice place..</a>
+<audio src="./musci/robbie-dupree-steal-away.mp3" autoplay loop></audio>
